--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
         <h1 id="title">Main Heading</h1>
         <img src="./images/example.png" alt="Author Headshot" id="avatar" />
-        <p class="text-center">Author.. Bio...</p>
+        <p >Author.. Bio...</p>
       </section>
       <article>
         <section>
@@ -46,7 +46,7 @@
       </article>
     </main>
 
-    <footer>
+    <footer class="text-center">
       <nav>
         <ul>
           <li>
@@ -58,7 +58,7 @@
         </ul>
       </nav>
 
-      <div>
+      <div >
         <p>Powered by 🕯️</p>
         <p>&copy; TrueCoders 2021-24</p>
       </div>
